--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,11 @@
 spring.application.name=taskmanager2
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
 spring.data.mongodb.database=task_manager2
-spring.data.mongodb.uri=mongodb+srv://gauravsoni54670:P9vBQkZVZozbBasj@cluster0.n6z2aia.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-#spring.security.user.name = admin
-#spring.security.user.password = admin123
-# Logging - prevent spam MongoDB heartbeat logs
+spring.data.mongodb.uri=${MONGODB_URI}
 logging.level.org.mongodb.driver.cluster=INFO
 spring.main.allow-circular-references=true
-
-#sending alert
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=gauravvv54670@gmail.com
-spring.mail.password=frex nhxa sxfz cxmr
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
