--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=taskmanager2
-spring.data.mongodb.database=task_manager2
+#spring.data.mongodb.database=task_manager2
 spring.data.mongodb.uri=${MONGODB_URI}
 logging.level.org.mongodb.driver.cluster=INFO
 spring.main.allow-circular-references=true
@@ -9,3 +9,7 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+logging.level.root=INFO
+logging.level.com.gaurav=DEBUG
+logging.level.org.springframework.security=DEBUG
